app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

:root{
  interpolate-size: allow-keywords; /* Opt-in the whole page to interpolate sizes to/from keywords */
  --footer-height: 70px;
  --border: 1px solid var(--secondary-text-clr);

  --error-bg: #FEE2E2;
  --error-text: #DC2626;
  --success-bg: #DCFCE7;
  --success-text: #16A34A;
  --info-bg: #DBEAFE;
  --info-text: #2563EB;
  --warning-bg: #FEF3C7;
  --warning-text: #D97706;

  --base-clr: #11121a;
  --line-clr: #42434a;
  --hover-clr: #222533;
  --primary-text-clr: #212529;
  --secondary-text-clr: #E4E1E5;
  --accent-clr: #BB2426; /* cor de destaque*/
  --background: #F5F5F5; /* branco fumaça*/
  --foreground: #1F1F1F;
  --primary-clr: #0E1D59;
  --primary-rgb: 14, 29, 89;
  --secondary-clr:rgb(152, 128, 176);
  --danger-clr: #dc3545;
  --success-clr: #198754;
  --warning-clr: #ffc107;
  --warning-rgb: rgb(255, 193, 7);
  --info-clr: #0dcaf0;
  --disabled-clr: #6c757d;
  --light-clr: #f8f9fa;
  --dark-clr: #212529;
  --gray-clr: #9e9e9e;
  --instagram-clr: #e4405f;
  --facebook-clr: #3b5998;
  --x-clr: #212529;
  font-family: 'Inter', 'Open Sans', sans-serif;

  --primary-color: #0066cc;
  --primary-color-dark: #031d42;
  --primary-color-light: rgba(5, 44, 101, 0.1);
  --secondary-color: #e9ecef;
  --success-color: #28a745;
  --error-color: #dc3545;
  --error-color-light: rgba(220, 53, 69, 0.1);
  --disabled-color: #6c757d;
  --border-color: #ced4da;
  --text-color: #212529;
  --disabled-bg: #f7fafc;

  /* Cores dos cards */
  --card1-clr: #052c65;
  --card2-clr: #084298;
  --card3-clr: #0a58ca;
  --card4-clr: #3d8bfd;
  --card5-clr: #6ea8fe;
  --card6-clr: #616161;
  --card7-clr: #010101;
  --card8-clr: #00695c;
  --card9-clr: #26a69a;

  --color-primary: #0030B9;
  --color-primary-hover: #002694;
  --color-primary-dark: #001d6f;
  --color-primary-disabled: #99ace3;
  --color-secondary: #91C651;
  --color-secondary-hover: #749e41;
  --color-secondary-active: #577731;
  --color-red: #C5381A;
  --color-red-hover: #BB3519;
  --color-red-active: #AC290D;

  --jornada-primary: #0030b9;
  --jornada-secondary: #6c757d;
  --jornada-success: #198754;
  --jornada-warning: #ec6b00;
  --jornada-danger: #dc3545;
  --jornada-info: #066bb3;
  --jornada-highlight: #0030b9;
  --jornada-light: #f8f9fa;
  --jornada-light-rgb: 248, 249, 250;
  --jornada-dark: #343a40;
  --jornada-dark-rgb: 52, 58, 64;
  --jornada-primary-100: rgb(204, 213.6, 241);
  --jornada-primary-200: rgb(153, 172.2, 227);
  --jornada-primary-300: rgb(102, 130.8, 213);
  --jornada-primary-400: rgb(51, 89.4, 199);
  --jornada-primary-500: #0030b9;
  --jornada-primary-600: rgb(0, 38.4, 148);
  --jornada-primary-700: rgb(0, 28.8, 111);
  --jornada-primary-800: rgb(0, 19.2, 74);
  --jornada-primary-900: rgb(0, 9.6, 37);
  --jornada-secondary-100: #e9ecef;
  --jornada-secondary-200: #dee2e6;
  --jornada-secondary-300: #ced4da;
  --jornada-secondary-400: #adb5bd;
  --jornada-secondary-500: #6c757d;
  --jornada-secondary-600: #495057;
  --jornada-secondary-700: #343a40;
  --jornada-secondary-800: #212529;
  --jornada-secondary-900: #1a1e21;
  --jornada-success-100: rgb(209, 231, 220.8);
  --jornada-success-200: rgb(163, 207, 186.6);
  --jornada-success-300: rgb(117, 183, 152.4);
  --jornada-success-400: rgb(71, 159, 118.2);
  --jornada-success-500: #198754;
  --jornada-success-600: rgb(20, 108, 67.2);
  --jornada-success-700: rgb(15, 81, 50.4);
  --jornada-success-800: rgb(10, 54, 33.6);
  --jornada-success-900: rgb(5, 27, 16.8);
  --jornada-warning-100: rgb(251.2, 225.4, 204);
  --jornada-warning-200: rgb(247.4, 195.8, 153);
  --jornada-warning-300: rgb(243.6, 166.2, 102);
  --jornada-warning-400: rgb(239.8, 136.6, 51);
  --jornada-warning-500: #ec6b00;
  --jornada-warning-600: rgb(188.8, 85.6, 0);
  --jornada-warning-700: rgb(141.6, 64.2, 0);
  --jornada-warning-800: rgb(94.4, 42.8, 0);
  --jornada-warning-900: rgb(47.2, 21.4, 0);
  --jornada-danger-100: rgb(248, 214.6, 217.8);
  --jornada-danger-200: rgb(241, 174.2, 180.6);
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --base-clr: #f2f5f7;
    --line-clr: #42434a;
    --hover-clr: #222533;
    --primary-text-clr: #f2f5f7;
    --secondary-text-clr: #E4E1E5;
    --accent-clr: #BB2426;
    --background: #292b2c;
    --foreground: #f7f7f7; 
  }
} */

html,
body {
  overflow-x: hidden;
  width: 100%;
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

html {
  scroll-behavior: smooth !important;
}

body {
  color: var(--base-clr);
  background: var(--background);
  font-family: Inter, Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body, #__next {
  height: 100vh;
  margin: 0;
  padding: 0;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    clr-scheme: dark;
  }
}

